--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
           # 创建目标临时目录（可选）
           ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_IP "mkdir -p /tmp/vitepress_deploy"
           # 使用 rsync 把构建产物同步到服务器临时目录（这样能保证原子性）
-          rsync -avz -e "ssh -i private_key -o StrictHostKeyChecking=no" docs/.vitepress/dist/ $SERVER_USER@$SERVER_IP:/tmp/vitepress_deploy/
+          rsync -avz --delete -e "ssh -i private_key -o StrictHostKeyChecking=no" docs/.vitepress/dist/ $SERVER_USER@$SERVER_IP:/tmp/vitepress_deploy/
           # 在服务器上把临时目录内容移动到网站根（覆盖），并设置权限
           ssh -i private_key -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "rsync -av --delete /tmp/vitepress_deploy/ /www/wwwroot/cuipengfei_com/ && chown -R root:root /www/wwwroot/cuipengfei_com/ || true"
           # 清理临时私钥文件
