--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "update-articles": "node scripts/update-latest-articles.js",
+    "watch-articles": "node scripts/update-latest-articles.js --watch",
+
+    "docs:dev": "npm run update-articles && vitepress dev docs",
+    "docs:build": "npm run update-articles && vitepress build docs",
+    "docs:preview": "vitepress preview docs",
+
+    "dev": "npm run docs:dev",
+    "build": "npm run docs:build"
   },
   "dependencies": {
     "vitepress": "^1.6.4",
