--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with: 
+          fetch-depth: 0  # 拉取完整历史
 
       - name: Use Node.js
         uses: actions/setup-node@v4
