--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,80 @@
-# 默认使用 LF
-* text eol=lf
-# 仅 Windows 批处理文件用 CRLF
-*.bat text eol=crlf
+# ================================
+# 默认文本文件统一使用 LF
+# ================================
+* text=auto eol=lf
+
+# ================================
+# 脚本文件
+# ================================
+*.sh     text eol=lf
+*.bash   text eol=lf
+*.zsh    text eol=lf
+*.ps1    text eol=crlf
+*.bat    text eol=crlf
+*.cmd    text eol=crlf
+*.js     text eol=lf
+*.ts     text eol=lf
+*.jsx    text eol=lf
+*.tsx    text eol=lf
+*.py     text eol=lf
+*.rb     text eol=lf
+*.php    text eol=lf
+*.java   text eol=lf
+*.c      text eol=lf
+*.cpp    text eol=lf
+*.h      text eol=lf
+*.cs     text eol=lf
+
+# ================================
+# Markdown / 文档 / 配置文件
+# ================================
+*.md     text eol=lf
+*.markdown text eol=lf
+*.txt    text eol=lf
+*.json   text eol=lf
+*.yml    text eol=lf
+*.yaml   text eol=lf
+*.xml    text eol=lf
+*.html   text eol=lf
+*.htm    text eol=lf
+*.css    text eol=lf
+*.scss   text eol=lf
+*.less   text eol=lf
+
+# ================================
+# Git / 项目配置文件
+# ================================
+*.gitignore text eol=lf
+*.gitattributes text eol=lf
+*.editorconfig text eol=lf
+
+# ================================
+# 二进制文件，禁止转换
+# ================================
+*.png    binary
+*.jpg    binary
+*.jpeg   binary
+*.gif    binary
+*.ico    binary
+*.pdf    binary
+*.zip    binary
+*.7z     binary
+*.tar    binary
+*.gz     binary
+*.mp3    binary
+*.mp4    binary
+*.mov    binary
+*.avi    binary
+*.mkv    binary
+*.woff   binary
+*.woff2  binary
+*.ttf    binary
+*.eot    binary
+*.otf    binary
+
+# ================================
+# 特殊情况，可按需添加
+# ================================
+*.lock   text eol=lf
+*.log    text eol=lf
+*.env    text eol=lf
