--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,13 @@ jobs:
         uses: actions/checkout@v4
         with: 
           fetch-depth: 0  # 拉取完整历史
+          persist-credentials: false
+          fetch-tags: true
+          clean: true
+
+      # 确保完全非浅克隆
+      - name: Ensure full git history
+        run: git fetch --unshallow || true
 
       - name: Use Node.js
         uses: actions/setup-node@v4
