--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ yarn-error.log*
 # 系统文件
 .DS_Store
 Thumbs.db
+
+# 环境变量（重要！Firebase 配置）
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+.env*.local
